# bravo6

./: .gitignore  CMakeLists.txt  README.md
bravo6/: CMakeLists.txt
bravo6/include/bravo6/core/: constructor_helper.hpp  resource_helper.hpp  shader_helper.hpp  texture_helper.hpp  window.hpp
bravo6/include/bravo6/core/components/: c_drawable.hpp  c_drawable_indexed.hpp  c_model_view_projection.hpp  c_shader.hpp  c_texture.hpp
bravo6/include/bravo6/engine/: context.hpp  ec_manager.hpp  engine.hpp  input_manager.hpp
bravo6/include/bravo6/logging/: logging.hpp
bravo6/include/bravo6/systems/: render_system.hpp  system_base.hpp
bravo6/include/bravo6/types/: observer_ptr.hpp
bravo6/include/yaecs/: ec_engine.hpp
bravo6/src/bravo6/core/: constructor_helper.cpp  shader_helper.cpp  texture_helper.cpp  window.cpp
bravo6/src/bravo6/engine/: context.cpp  engine.cpp  input_manager.cpp
bravo6/src/bravo6/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
bravo6/src/bravo6/logging/: logging.cpp
bravo6/src/bravo6/systems/: render_system.cpp
cmake/: Cache.cmake  Conan.cmake
experiments/1/: CMakeLists.txt  gl_example_f3.cpp  test_system.cpp  test_system.hpp
templates/: bravo6_config.hpp.in
test/: CMakeLists.txt  benchmarks.cpp
